--- a/src/Header.css
+++ b/src/Header.css
@@ -93,3 +93,21 @@
     }
   }
   
+
+  .social-icons {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center; /* Centraliza os ícones horizontalmente */
+    gap: 15px; /* Espaço entre os ícones */
+  }
+  
+  .social-icons a {
+    color: #1EB8E7; /* Define uma cor padrão para os ícones */
+    font-size: 2rem; /* Ajusta o tamanho dos ícones */
+    transition: all 0.3s ease;
+  }
+  
+  .social-icons a:hover {
+    color: rgb(180, 89, 180); /* Muda para a segunda cor do gradiente no hover */
+  }
+  
