--- a/src/Header.css
+++ b/src/Header.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #333;
+    background-color: #1c1c1e;
     color: #fff;
   }
   
@@ -82,7 +82,7 @@
       position: absolute;
       top: 60px;
       right: 0;
-      background-color: #333;
+      background-color: #1c1c1e;
       width: 100%;
       padding: 10px;
     }
