--- a/src/About.css
+++ b/src/About.css
@@ -34,5 +34,6 @@
   
   .tech-icons svg:hover {
     transform: scale(1.1); /* Efeito de zoom ao passar o mouse */
+    color: rgb(6, 196, 243);
   }
   
