--- a/src/Header.css
+++ b/src/Header.css
@@ -68,7 +68,7 @@
   background-clip: text;
   color: transparent;
   font-weight: bold;
-  padding: 8px;
+  padding-right: 13px;
 }
 
 /* Estilos para telas menores (dispositivos móveis) */
