--- a/src/Header.css
+++ b/src/Header.css
@@ -31,7 +31,7 @@
 
 .navbar {
   display: flex;
-  margin-left: 8px;
+  
 }
 
 .nav-links {
@@ -39,6 +39,7 @@
   list-style: none;
   display: flex;
   gap: 20px;
+  margin-right: 20px;
 }
 
 .nav-links li {
