--- a/src/About.css
+++ b/src/About.css
@@ -22,21 +22,32 @@
     line-height: 1.4; /* Altura da linha para melhor legibilidade */
   }
 
+  .tech-icons-container {
+    overflow: hidden; /* Oculta o overflow para mostrar apenas uma linha */
+    white-space: nowrap; /* Impede a quebra de linha */
+    width: 100%; /* Define a largura do contêiner */
+  }
+  
   .tech-icons {
-    margin-top: 30px; /* Espaçamento acima dos ícones */
-    display: flex; /* Flexbox para alinhar ícones em linha */
-    justify-content: center; /* Centraliza os ícones */
-    gap: 20px; /* Espaço entre os ícones */
+    display: inline-flex; /* Flexbox para alinhar os ícones em linha */
+    animation: slide 20s linear infinite; /* Animação contínua */
   }
   
-  .tech-icons svg {
-    transition: transform 0.3s; /* Efeito de transição */
+  .tech-icon {
+    margin: 0 10px; /* Adiciona margem horizontal entre os ícones */
   }
   
-  .tech-icons svg:hover {
-    transform: scale(1.1); /* Efeito de zoom ao passar o mouse */
-    color: rgb(6, 196, 243);
+  /* Definição da animação de deslizar */
+  @keyframes slide {
+    0% {
+      transform: translateX(0); /* Começa na posição original */
+    }
+    100% {
+      transform: translateX(-50%); /* Move metade da largura do conteúdo */
+    }
   }
+  
+  
 
   .avatar {
     width: 130px; /* Define a largura do avatar */
