--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,4 +1,3 @@
-
 .projects-section {
   background-color: #1c1c1e; /* Cor de fundo */
   color: #f3eded; /* Cor do texto */
@@ -12,28 +11,45 @@
 }
 
 .projects-list {
+  display: flex; /* Exibe os itens na horizontal */
+  flex-wrap: wrap; /* Permite o wrap dos itens */
+  justify-content: space-around; /* Distribui espaço uniforme entre os itens */
   max-width: 1200px; /* Largura máxima do container */
   margin: 0 auto; /* Centraliza o container */
 }
 
 .project-item {
   background-color: #2a2a2c; /* Cor de fundo dos itens */
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 10px;
+  margin: 10px; /* Espaço entre os itens */
   border-radius: 8px;
+  flex: 1 1 45%; /* Flex-grow, flex-shrink e flex-basis ajustados para 45% da largura */
+  width: calc(50% - 20px); /* Largura ajustada para caber 2 itens com margem */
 }
 
 .project-item h3 {
-  font-size: 22px; /* Tamanho da fonte do título do projeto */
-  margin-bottom: 10px;
-}
-
-.project-item p {
-  font-size: 17px; /* Tamanho da fonte da descrição */
-  margin-bottom: 10px;
+  font-size: 18px; /* Tamanho da fonte do título do projeto */
+  margin-bottom: 8px;
 }
 
 .project-item a {
   color: #61dafb; /* Cor do link */
   text-decoration: none; /* Remove sublinhado */
+}
+
+/* Media Queries para telas menores */
+@media (max-width: 768px) {
+  .project-item {
+    width: calc(50% - 20px); /* Ajusta a largura para 50% */
+  }
+}
+
+@media (max-width: 480px) {
+  .projects-list {
+    justify-content: center; /* Alinha os itens no centro */
+  }
+
+  .project-item {
+    width: calc(50% - 20px); /* Ajusta a largura para 50% para caber 2 itens por linha em telas de celular */
+  }
 }
