--- a/src/Footer.css
+++ b/src/Footer.css
@@ -7,6 +7,7 @@
   
   .footer-container {
     max-width: 1200px;
+      min-height: 100vh;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
